# vscode_cmake_project

./: CMakeLists.txt  ReadMe.md
test/: test_dummy.cpp
